--- a/css/elemental-admin.css
+++ b/css/elemental-admin.css
@@ -29,11 +29,20 @@
         color: #999;
     }
 
+button.element-icon-virtual {
+    padding-left: 40px;
+}
+
 button.element-icon-virtual:before {
     background: url("../images/virtual.svg") no-repeat center;
     background-size: 100% auto;
     width: 28px;
     height: 32px;
+    display: block;
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 5px;
 }
 
 .element-editor-header__icon-container .element-icon-virtual {
